adding and customizing the costom button, configuring ImagePicker functionality, previewing the image picked

--- a/app.json
+++ b/app.json
@@ -23,6 +23,14 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "cameraPermission": "The app want to  access your camera to take photo of your location"
+        }
+      ]
+    ]
   }
 }
